# NSP2-Alpha-Bron

./: 404.html  README.md  alfa bron 21 mbar.csv  alfa bron lucht 100 mbar.csv  alfa bron lucht 200 mbar.csv  alfa bron lucht 600 mbar.csv  alfa bron lucht 700 mbar.csv  alfa bron lucht 900 mbar.csv  alpha_lucht_200.csv  dracht.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
CSV data/: alfa bron lucht 300 mbar.csv  alfa bron lucht 400 mbar.csv  alfa bron lucht 500 mbar.csv  alfa bron lucht 800 mbar.csv  meting 2- alfa bron 21 mbar.csv  meting 2- alfa bron lucht 100 mbar.csv  meting 2- alfa bron lucht 200 mbar.csv  meting 2- alfa bron lucht 300 mbar.csv  meting 3- alfa bron 21 mbar.csv  meting 3- alfa bron lucht 100 mbar.csv  meting 3- alfa bron lucht 200 mbar.csv  meting 3- alfa bron lucht 300 mbar.csv  meting 3- alfa bron lucht 400 mbar.csv  meting 3- alfa bron lucht 800 mbar.csv  meting 4- alfa bron argon 100 mbar.csv  meting 4- alfa bron argon 200 mbar.csv  meting 4- alfa bron argon 27 mbar.csv  meting 4- alfa bron argon 300 mbar.csv  meting 4- alfa bron argon 400 mbar.csv  meting 4- alfa bron argon 500 mbar.csv  meting 4- alfa bron argon 600 mbar.csv  meting 4- alfa bron argon 700 mbar.csv  meting 5- alfa bron helium 100 mbar.csv  meting 5- alfa bron helium 150 mbar.csv  meting 5- alfa bron helium 200 mbar.csv  meting 5- alfa bron helium 250 mbar.csv  meting 5- alfa bron helium 300 mbar.csv  meting 5- alfa bron helium 350 mbar.csv  meting 5- alfa bron helium 400 mbar.csv  meting 5- alfa bron helium 450 mbar.csv  meting 5- alfa bron helium 50 mbar.csv  (+5 more)
(+7 files in other folders)
